# notion2markdown

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
notion2markdown/: __init__.py  cli.py  json2md.py  notion.py  utils.py
