[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion2markdown"
version = "0.1.0"
authors = [
  { name="Alvin Wan", email="hi@alvinwan.com" },
]
description = "Export notion pages to markdown in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "notion-client"
]

[tool.setuptools.packages.find]
include = ["notion2markdown"]

[project.scripts]
notion2markdown = "notion2markdown.cli:main"
n2md = "notion2markdown.cli:main"

[project.urls]
"Homepage" = "https://github.com/alvinwan/notion2markdown"
"Bug Tracker" = "https://github.com/alvinwan/notion2markdown/issues"